uptime-kuma/uptime-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
spec:
  ports:
    - name: uptime
      port: 80
      protocol: TCP
      targetPort: 3001
  selector:
    app: uptime
